# mst-experiment

./: .gitignore  CHANGELOG.md  README.md  hie.yaml  mst-experiment.cabal  stack.yaml
.github/: CODEOWNERS
app/: Main.hs
benchmark/: Benchmark.hs
report/: preamble.tex  refs.bib  report.tex  results.md
src/: Experiment.hs  Graph.hs
src/Internal/: Graph.hs  Mean.hs  Plot.hs  Statistics.hs
