cabal-version:       2.4

name:                mst-experiment
version:             0.1.0.0
build-type:          Simple
license:             MIT
license-file:        LICENSE
author:              Arnau Abella
maintainer:          arnauabella@gmail.com
copyright:           2020 Arnau Abella
homepage:            https://github.com/monadplus/mst-experiment
bug-reports:         https://github.com/monadplus/mst-experiment/issues
synopsis:
description:
category:
extra-source-files:  README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.4

source-repository head
  type:                git
  location:            https://github.com/monadplus/mst-experiment.git

common common-options
    build-depends:    base ^>=4.13.0.0
    default-language: Haskell2010
    other-extensions: OverloadedStrings
                      BangPatterns
    ghc-options:      -Wall
                      -Werror
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wcompat
                      -Widentities
                      -Wredundant-constraints
                      -Wpartial-fields
                      -fhide-source-paths
                      -freverse-errors
  if impl(ghc >= 8.8.1)
    ghc-options:      -Wmissing-deriving-strategies
                      -Werror=missing-deriving-strategies

Executable mst-experiment
  import:                common-options
  main-is:               Main.hs
  hs-source-dirs:        app
  ghc-options:           -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:         base >=4.12 && <4.15

Library
  import:             common-options
  hs-source-dirs:     src
  exposed-modules:    Lib
  other-modules:
  build-depends:      bytestring         ^>=0.10,
                      containers         ^>=0.6,
                      deepseq            ^>=1.4,
                      text               ^>=1.2,

Benchmark mst-experiment-bench
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: benchmark
  main-is:        Benchmark.hs
  ghc-options:    -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:  mst-experiment,
                  gauge  ^>=0.2,
